Trabalho4/y.output
Nonterminals useless in grammar

    ARG


Terminals unused in grammar

    AND
    OR
    ME_IG
    MA_IG
    DIF


Rules useless in grammar

  112 ARG: E


State 104 conflicts: 8 shift/reduce
State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMDs CMD
    3     | ε

    4 CMD: CMD_LET ';'
    5    | CMD_VAR ';'
    6    | CMD_CONST ';'
    7    | CMD_IF
    8    | CMD_FUNC
    9    | CMD_FOR
   10    | CMD_WHILE
   11    | CMD_RET ';'
   12    | CMD_ASM ';'
   13    | E ';'
   14    | BLOCO
   15    | ';'

   16 BLOCO: '{' START_BLOCO CMDs '}' END_BLOCO

   17 START_BLOCO: ε

   18 END_BLOCO: ε

   19 CMD_RET: RETURN
   20        | RETURN E

   21 CMD_ASM: E ASM

   22 EMPILHA_TS_FUNC: ε

   23 DESEMPILHA_TS_FUNC: ε

   24 CMD_FUNC: FUNCTION NOME_FUNCAO '(' EMPILHA_TS_FUNC LISTA_PARAMs ')' '{' CMDs '}' DESEMPILHA_TS_FUNC

   25 NOME_FUNCAO: ID

   26 LISTA_PARAMs: PARAMs
   27             | PARAMs ','
   28             | ε

   29 PARAMs: PARAMs ',' PARAM
   30       | PARAM

   31 PARAM: ID
   32      | ID '=' E

   33 CMD_FOR: FOR '(' SF ';' E ';' EF ')' CMD

   34 EF: E
   35   | ε

   36 SF: CMD_LET
   37   | CMD_VAR
   38   | CMD_CONST
   39   | EF

   40 CMD_WHILE: WHILE '(' E ')' CMD

   41 CMD_LET: LET LET_VARs

   42 LET_VARs: LET_VAR ',' LET_VARs
   43         | LET_VAR

   44 LET_VAR: ID
   45        | ID '=' E

   46 CMD_VAR: VAR VAR_VARs

   47 VAR_VARs: VAR_VAR ',' VAR_VARs
   48         | VAR_VAR

   49 VAR_VAR: ID
   50        | ID '=' E

   51 CMD_CONST: CONST CONST_VARs

   52 CONST_VARs: CONST_VAR ',' CONST_VARs
   53           | CONST_VAR

   54 CONST_VAR: ID
   55          | ID '=' E

   56 CMD_IF: IF '(' E ')' CMD
   57       | IF '(' E ')' CMD ELSE CMD

   58 LVALUEPROP: LVALUEPROP '[' E ']'
   59           | LVALUEPROP '.' ID
   60           | F '[' E ']'
   61           | F '.' ID
   62           | ID '[' E ']'
   63           | ID '.' ID

   64 LIST: '[' LISTVALS ']'
   65     | '[' ']'

   66 LISTVALS: LISTVAL ',' LISTVALS
   67         | LISTVAL

   68 LISTVAL: E

   69 E: ID '=' E
   70  | ID MAIS_IGUAL E
   71  | ID MENOS_IGUAL E
   72  | LVALUEPROP '=' E
   73  | LVALUEPROP MAIS_IGUAL E
   74  | LVALUEPROP
   75  | ID
   76  | E IGUAL E
   77  | E '<' E
   78  | E '>' E
   79  | E '+' E
   80  | E '-' E
   81  | E '*' E
   82  | E '/' E
   83  | E '%' E
   84  | '-' E
   85  | '+' E
   86  | UN

   87 UN: MAIS_MAIS ID
   88   | MENOS_MENOS ID
   89   | ID MAIS_MAIS
   90   | ID MENOS_MENOS
   91   | MAIS_MAIS LVALUEPROP
   92   | MENOS_MENOS LVALUEPROP
   93   | LVALUEPROP MAIS_MAIS
   94   | LVALUEPROP MENOS_MENOS
   95   | F

   96 F: CDOUBLE
   97  | CINT
   98  | CSTRING
   99  | CBOOL
  100  | '(' E ')'
  101  | LIST
  102  | '(' '{' '}' ')'
  103  | CHAMA_FUNC

  104 CHAMA_FUNC: ID '(' LISTA_ARGS ')'
  105           | LVALUEPROP '(' LISTA_ARGS ')'
  106           | '(' E ')' '(' LISTA_ARGS ')'

  107 LISTA_ARGS: ARGs
  108           | ARGs ','
  109           | ε

  110 ARGs: E
  111     | ARGs ',' E


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 83
    '(' (40) 24 33 40 56 57 100 102 104 105 106
    ')' (41) 24 33 40 56 57 100 102 104 105 106
    '*' (42) 81
    '+' (43) 79 85
    ',' (44) 27 29 42 47 52 66 108 111
    '-' (45) 80 84
    '.' (46) 59 61 63
    '/' (47) 82
    ';' (59) 4 5 6 11 12 13 15 33
    '<' (60) 77
    '=' (61) 32 45 50 55 69 72
    '>' (62) 78
    '[' (91) 58 60 62 64 65
    ']' (93) 58 60 62 64 65
    '{' (123) 16 24 102
    '}' (125) 16 24 102
    error (256)
    ID (258) 25 31 32 44 45 49 50 54 55 59 61 62 63 69 70 71 75 87 88 89 90 104
    IF (259) 56 57
    ELSE (260) 57
    LET (261) 41
    CONST (262) 51
    VAR (263) 46
    FOR (264) 33
    WHILE (265) 40
    FUNCTION (266) 24
    RETURN (267) 19 20
    ASM (268) 21
    CDOUBLE (269) 96
    CSTRING (270) 98
    CINT (271) 97
    CBOOL (272) 99
    AND (273)
    OR (274)
    ME_IG (275)
    MA_IG (276)
    DIF (277)
    IGUAL (278) 76
    MAIS_IGUAL (279) 70 73
    MAIS_MAIS (280) 87 89 91 93
    MENOS_IGUAL (281) 71
    MENOS_MENOS (282) 88 90 92 94


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    S (46)
        on left: 1
        on right: 0
    CMDs (47)
        on left: 2 3
        on right: 1 2 16 24
    CMD (48)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 2 33 40 56 57
    BLOCO (49)
        on left: 16
        on right: 14
    START_BLOCO (50)
        on left: 17
        on right: 16
    END_BLOCO (51)
        on left: 18
        on right: 16
    CMD_RET (52)
        on left: 19 20
        on right: 11
    CMD_ASM (53)
        on left: 21
        on right: 12
    EMPILHA_TS_FUNC (54)
        on left: 22
        on right: 24
    DESEMPILHA_TS_FUNC (55)
        on left: 23
        on right: 24
    CMD_FUNC (56)
        on left: 24
        on right: 8
    NOME_FUNCAO (57)
        on left: 25
        on right: 24
    LISTA_PARAMs (58)
        on left: 26 27 28
        on right: 24
    PARAMs (59)
        on left: 29 30
        on right: 26 27 29
    PARAM (60)
        on left: 31 32
        on right: 29 30
    CMD_FOR (61)
        on left: 33
        on right: 9
    EF (62)
        on left: 34 35
        on right: 33 39
    SF (63)
        on left: 36 37 38 39
        on right: 33
    CMD_WHILE (64)
        on left: 40
        on right: 10
    CMD_LET (65)
        on left: 41
        on right: 4 36
    LET_VARs (66)
        on left: 42 43
        on right: 41 42
    LET_VAR (67)
        on left: 44 45
        on right: 42 43
    CMD_VAR (68)
        on left: 46
        on right: 5 37
    VAR_VARs (69)
        on left: 47 48
        on right: 46 47
    VAR_VAR (70)
        on left: 49 50
        on right: 47 48
    CMD_CONST (71)
        on left: 51
        on right: 6 38
    CONST_VARs (72)
        on left: 52 53
        on right: 51 52
    CONST_VAR (73)
        on left: 54 55
        on right: 52 53
    CMD_IF (74)
        on left: 56 57
        on right: 7
    LVALUEPROP (75)
        on left: 58 59 60 61 62 63
        on right: 58 59 72 73 74 91 92 93 94 105
    LIST (76)
        on left: 64 65
        on right: 101
    LISTVALS (77)
        on left: 66 67
        on right: 64 66
    LISTVAL (78)
        on left: 68
        on right: 66 67
    E (79)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
        on right: 13 20 21 32 33 34 40 45 50 55 56 57 58 60 62 68 69 70 71 72 73 76 77 78 79 80 81 82 83 84 85 100 106 110 111
    UN (80)
        on left: 87 88 89 90 91 92 93 94 95
        on right: 86
    F (81)
        on left: 96 97 98 99 100 101 102 103
        on right: 60 61 95
    CHAMA_FUNC (82)
        on left: 104 105 106
        on right: 103
    LISTA_ARGS (83)
        on left: 107 108 109
        on right: 104 105 106
    ARGs (84)
        on left: 110 111
        on right: 107 108 111


State 0

    0 $accept: • S $end

    $default  reduce using rule 3 (CMDs)

    S     go to state 1
    CMDs  go to state 2


State 1

    0 $accept: S • $end

    $end  shift, and go to state 3


State 2

    1 S: CMDs •
    2 CMDs: CMDs • CMD

    ID           shift, and go to state 4
    IF           shift, and go to state 5
    LET          shift, and go to state 6
    CONST        shift, and go to state 7
    VAR          shift, and go to state 8
    FOR          shift, and go to state 9
    WHILE        shift, and go to state 10
    FUNCTION     shift, and go to state 11
    RETURN       shift, and go to state 12
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ';'          shift, and go to state 23
    '{'          shift, and go to state 24

    $default  reduce using rule 1 (S)

    CMD         go to state 25
    BLOCO       go to state 26
    CMD_RET     go to state 27
    CMD_ASM     go to state 28
    CMD_FUNC    go to state 29
    CMD_FOR     go to state 30
    CMD_WHILE   go to state 31
    CMD_LET     go to state 32
    CMD_VAR     go to state 33
    CMD_CONST   go to state 34
    CMD_IF      go to state 35
    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 38
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 3

    0 $accept: S $end •

    $default  accept


State 4

   62 LVALUEPROP: ID • '[' E ']'
   63           | ID • '.' ID
   69 E: ID • '=' E
   70  | ID • MAIS_IGUAL E
   71  | ID • MENOS_IGUAL E
   75  | ID •
   89 UN: ID • MAIS_MAIS
   90   | ID • MENOS_MENOS
  104 CHAMA_FUNC: ID • '(' LISTA_ARGS ')'

    MAIS_IGUAL   shift, and go to state 42
    MAIS_MAIS    shift, and go to state 43
    MENOS_IGUAL  shift, and go to state 44
    MENOS_MENOS  shift, and go to state 45
    '='          shift, and go to state 46
    '['          shift, and go to state 47
    '('          shift, and go to state 48
    '.'          shift, and go to state 49

    $default  reduce using rule 75 (E)


State 5

   56 CMD_IF: IF • '(' E ')' CMD
   57       | IF • '(' E ')' CMD ELSE CMD

    '('  shift, and go to state 50


State 6

   41 CMD_LET: LET • LET_VARs

    ID  shift, and go to state 51

    LET_VARs  go to state 52
    LET_VAR   go to state 53


State 7

   51 CMD_CONST: CONST • CONST_VARs

    ID  shift, and go to state 54

    CONST_VARs  go to state 55
    CONST_VAR   go to state 56


State 8

   46 CMD_VAR: VAR • VAR_VARs

    ID  shift, and go to state 57

    VAR_VARs  go to state 58
    VAR_VAR   go to state 59


State 9

   33 CMD_FOR: FOR • '(' SF ';' E ';' EF ')' CMD

    '('  shift, and go to state 60


State 10

   40 CMD_WHILE: WHILE • '(' E ')' CMD

    '('  shift, and go to state 61


State 11

   24 CMD_FUNC: FUNCTION • NOME_FUNCAO '(' EMPILHA_TS_FUNC LISTA_PARAMs ')' '{' CMDs '}' DESEMPILHA_TS_FUNC

    ID  shift, and go to state 62

    NOME_FUNCAO  go to state 63


State 12

   19 CMD_RET: RETURN •
   20        | RETURN • E

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    $default  reduce using rule 19 (CMD_RET)

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 64
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 13

   96 F: CDOUBLE •

    $default  reduce using rule 96 (F)


State 14

   98 F: CSTRING •

    $default  reduce using rule 98 (F)


State 15

   97 F: CINT •

    $default  reduce using rule 97 (F)


State 16

   99 F: CBOOL •

    $default  reduce using rule 99 (F)


State 17

   87 UN: MAIS_MAIS • ID
   91   | MAIS_MAIS • LVALUEPROP

    ID       shift, and go to state 65
    CDOUBLE  shift, and go to state 13
    CSTRING  shift, and go to state 14
    CINT     shift, and go to state 15
    CBOOL    shift, and go to state 16
    '['      shift, and go to state 21
    '('      shift, and go to state 22

    LVALUEPROP  go to state 66
    LIST        go to state 37
    F           go to state 67
    CHAMA_FUNC  go to state 41


State 18

   88 UN: MENOS_MENOS • ID
   92   | MENOS_MENOS • LVALUEPROP

    ID       shift, and go to state 68
    CDOUBLE  shift, and go to state 13
    CSTRING  shift, and go to state 14
    CINT     shift, and go to state 15
    CBOOL    shift, and go to state 16
    '['      shift, and go to state 21
    '('      shift, and go to state 22

    LVALUEPROP  go to state 69
    LIST        go to state 37
    F           go to state 67
    CHAMA_FUNC  go to state 41


State 19

   85 E: '+' • E

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 70
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 20

   84 E: '-' • E

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 71
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 21

   64 LIST: '[' • LISTVALS ']'
   65     | '[' • ']'

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    ']'          shift, and go to state 72

    LVALUEPROP  go to state 36
    LIST        go to state 37
    LISTVALS    go to state 73
    LISTVAL     go to state 74
    E           go to state 75
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 22

  100 F: '(' • E ')'
  102  | '(' • '{' '}' ')'
  106 CHAMA_FUNC: '(' • E ')' '(' LISTA_ARGS ')'

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
    '{'          shift, and go to state 76

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 77
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 23

   15 CMD: ';' •

    $default  reduce using rule 15 (CMD)


State 24

   16 BLOCO: '{' • START_BLOCO CMDs '}' END_BLOCO

    $default  reduce using rule 17 (START_BLOCO)

    START_BLOCO  go to state 78


State 25

    2 CMDs: CMDs CMD •

    $default  reduce using rule 2 (CMDs)


State 26

   14 CMD: BLOCO •

    $default  reduce using rule 14 (CMD)


State 27

   11 CMD: CMD_RET • ';'

    ';'  shift, and go to state 79


State 28

   12 CMD: CMD_ASM • ';'

    ';'  shift, and go to state 80


State 29

    8 CMD: CMD_FUNC •

    $default  reduce using rule 8 (CMD)


State 30

    9 CMD: CMD_FOR •

    $default  reduce using rule 9 (CMD)


State 31

   10 CMD: CMD_WHILE •

    $default  reduce using rule 10 (CMD)


State 32

    4 CMD: CMD_LET • ';'

    ';'  shift, and go to state 81


State 33

    5 CMD: CMD_VAR • ';'

    ';'  shift, and go to state 82


State 34

    6 CMD: CMD_CONST • ';'

    ';'  shift, and go to state 83


State 35

    7 CMD: CMD_IF •

    $default  reduce using rule 7 (CMD)


State 36

   58 LVALUEPROP: LVALUEPROP • '[' E ']'
   59           | LVALUEPROP • '.' ID
   72 E: LVALUEPROP • '=' E
   73  | LVALUEPROP • MAIS_IGUAL E
   74  | LVALUEPROP •
   93 UN: LVALUEPROP • MAIS_MAIS
   94   | LVALUEPROP • MENOS_MENOS
  105 CHAMA_FUNC: LVALUEPROP • '(' LISTA_ARGS ')'

    MAIS_IGUAL   shift, and go to state 84
    MAIS_MAIS    shift, and go to state 85
    MENOS_MENOS  shift, and go to state 86
    '='          shift, and go to state 87
    '['          shift, and go to state 88
    '('          shift, and go to state 89
    '.'          shift, and go to state 90

    $default  reduce using rule 74 (E)


State 37

  101 F: LIST •

    $default  reduce using rule 101 (F)


State 38

   13 CMD: E • ';'
   21 CMD_ASM: E • ASM
   76 E: E • IGUAL E
   77  | E • '<' E
   78  | E • '>' E
   79  | E • '+' E
   80  | E • '-' E
   81  | E • '*' E
   82  | E • '/' E
   83  | E • '%' E

    ASM    shift, and go to state 91
    IGUAL  shift, and go to state 92
    '<'    shift, and go to state 93
    '>'    shift, and go to state 94
    '+'    shift, and go to state 95
    '-'    shift, and go to state 96
    '*'    shift, and go to state 97
    '/'    shift, and go to state 98
    '%'    shift, and go to state 99
    ';'    shift, and go to state 100


State 39

   86 E: UN •

    $default  reduce using rule 86 (E)


State 40

   60 LVALUEPROP: F • '[' E ']'
   61           | F • '.' ID
   95 UN: F •

    '['  shift, and go to state 101
    '.'  shift, and go to state 102

    $default  reduce using rule 95 (UN)


State 41

  103 F: CHAMA_FUNC •

    $default  reduce using rule 103 (F)


State 42

   70 E: ID MAIS_IGUAL • E

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 103
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 43

   89 UN: ID MAIS_MAIS •

    $default  reduce using rule 89 (UN)


State 44

   71 E: ID MENOS_IGUAL • E

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 104
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 45

   90 UN: ID MENOS_MENOS •

    $default  reduce using rule 90 (UN)


State 46

   69 E: ID '=' • E

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 105
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 47

   62 LVALUEPROP: ID '[' • E ']'

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 106
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 48

  104 CHAMA_FUNC: ID '(' • LISTA_ARGS ')'

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    $default  reduce using rule 109 (LISTA_ARGS)

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 107
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41
    LISTA_ARGS  go to state 108
    ARGs        go to state 109


State 49

   63 LVALUEPROP: ID '.' • ID

    ID  shift, and go to state 110


State 50

   56 CMD_IF: IF '(' • E ')' CMD
   57       | IF '(' • E ')' CMD ELSE CMD

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 111
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 51

   44 LET_VAR: ID •
   45        | ID • '=' E

    '='  shift, and go to state 112

    $default  reduce using rule 44 (LET_VAR)


State 52

   41 CMD_LET: LET LET_VARs •

    $default  reduce using rule 41 (CMD_LET)


State 53

   42 LET_VARs: LET_VAR • ',' LET_VARs
   43         | LET_VAR •

    ','  shift, and go to state 113

    $default  reduce using rule 43 (LET_VARs)


State 54

   54 CONST_VAR: ID •
   55          | ID • '=' E

    '='  shift, and go to state 114

    $default  reduce using rule 54 (CONST_VAR)


State 55

   51 CMD_CONST: CONST CONST_VARs •

    $default  reduce using rule 51 (CMD_CONST)


State 56

   52 CONST_VARs: CONST_VAR • ',' CONST_VARs
   53           | CONST_VAR •

    ','  shift, and go to state 115

    $default  reduce using rule 53 (CONST_VARs)


State 57

   49 VAR_VAR: ID •
   50        | ID • '=' E

    '='  shift, and go to state 116

    $default  reduce using rule 49 (VAR_VAR)


State 58

   46 CMD_VAR: VAR VAR_VARs •

    $default  reduce using rule 46 (CMD_VAR)


State 59

   47 VAR_VARs: VAR_VAR • ',' VAR_VARs
   48         | VAR_VAR •

    ','  shift, and go to state 117

    $default  reduce using rule 48 (VAR_VARs)


State 60

   33 CMD_FOR: FOR '(' • SF ';' E ';' EF ')' CMD

    ID           shift, and go to state 4
    LET          shift, and go to state 6
    CONST        shift, and go to state 7
    VAR          shift, and go to state 8
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    $default  reduce using rule 35 (EF)

    EF          go to state 118
    SF          go to state 119
    CMD_LET     go to state 120
    CMD_VAR     go to state 121
    CMD_CONST   go to state 122
    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 123
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 61

   40 CMD_WHILE: WHILE '(' • E ')' CMD

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22

    LVALUEPROP  go to state 36
    LIST        go to state 37
    E           go to state 124
    UN          go to state 39
    F           go to state 40
    CHAMA_FUNC  go to state 41


State 62

   25 NOME_FUNCAO: ID •

    $default  reduce using rule 25 (NOME_FUNCAO)


State 63

   24 CMD_FUNC: FUNCTION NOME_FUNCAO • '(' EMPILHA_TS_FUNC LISTA_PARAMs ')' '{' CMDs '}' DESEMPILHA_TS_FUNC

    '('  shift, and go to state 125


State 64

   20 CMD_RET: RETURN E •
   76 E: E • IGUAL E
   77  | E • '<' E
   78  | E • '>' E
   79  | E • '+' E
   80  | E • '-' E
   81  | E • '*' E
   82  | E • '/' E
   83  | E • '%' E

    IGUAL  shift, and go to state 92
    '<'    shift, and go to state 93
    '>'    shift, and go to state 94
    '+'    shift, and go to state 95
    '-'    shift, and go to state 96
    '*'    shift, and go to state 97
    '/'    shift, and go to state 98
    '%'    shift, and go to state 99

    $default  reduce using rule 20 (CMD_RET)


State 65

   62 LVALUEPROP: ID • '[' E ']'
   63           | ID • '.' ID
   87 UN: MAIS_MAIS ID •
  104 CHAMA_FUNC: ID • '(' LISTA_ARGS ')'

    '['  shift, and go to state 47
    '('  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 87 (UN)


State 66

   58 LVALUEPROP: LVALUEPROP • '[' E ']'
   59           | LVALUEPROP • '.' ID
   91 UN: MAIS_MAIS LVALUEPROP •
  105 CHAMA_FUNC: LVALUEPROP • '(' LISTA_ARGS ')'

    '['  shift, and go to state 88
    '('  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 91 (UN)


State 67

   60 LVALUEPROP: F • '[' E ']'
   61           | F • '.' ID

    '['  shift, and go to state 101
    '.'  shift, and go to state 102


State 68

   62 LVALUEPROP: ID • '[' E ']'
   63           | ID • '.' ID
   88 UN: MENOS_MENOS ID •
  104 CHAMA_FUNC: ID • '(' LISTA_ARGS ')'

    '['  shift, and go to state 47
    '('  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 88 (UN)


State 69

   58 LVALUEPROP: LVALUEPROP • '[' E ']'
   59           | LVALUEPROP • '.' ID
   92 UN: MENOS_MENOS LVALUEPROP •
  105 CHAMA_FUNC: LVALUEPROP • '(' LISTA_ARGS ')'

    '['  shift, and go to state 88
    '('  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 92 (UN)


State 70

   76 E: E • IGUAL E
   77  | E • '<' E
   78  | E • '>' E
   79  | E • '+' E
   80  | E • '-' E
   81  | E • '*' E
   82  | E • '/' E
   83  | E • '%' E
   85  | '+' E •

    '*'  shift, and go to state 97
    '/'  shift, and go to state 98
    '%'  shift, and go to state 99

    $default  reduce using rule 85 (E)


State 71

   76 E: E • IGUAL E
   77  | E • '<' E
   78  | E • '>' E
   79  | E • '+' E
   80  | E • '-' E
   81  | E • '*' E
   82  | E • '/' E
   83  | E • '%' E
   84  | '-' E •

    '*'  shift, and go to state 97
    '/'  shift, and go to state 98
    '%'  shift, and go to state 99

    $default  reduce using rule 84 (E)


State 72

   65 LIST: '[' ']' •

    $default  reduce using rule 65 (LIST)


State 73

   64 LIST: '[' LISTVALS • ']'

    ']'  shift, and go to state 126


State 74

   66 LISTVALS: LISTVAL • ',' LISTVALS
   67         | LISTVAL •

    ','  shift, and go to state 127

    $default  reduce using rule 67 (LISTVALS)


State 75

   68 LISTVAL: E •
   76 E: E • IGUAL E
   77  | E • '<' E
   78  | E • '>' E
   79  | E • '+' E
   80  | E • '-' E
   81  | E • '*' E
   82  | E • '/' E
   83  | E • '%' E

    IGUAL  shift, and go to state 92
    '<'    shift, and go to state 93
    '>'    shift, and go to state 94
    '+'    shift, and go to state 95
    '-'    shift, and go to state 96
    '*'    shift, and go to state 97
    '/'    shift, and go to state 98
    '%'    shift, and go to state 99

    $default  reduce using rule 68 (LISTVAL)


State 76

  102 F: '(' '{' • '}' ')'

    '}'  shift, and go to state 128


State 77

   76 E: E • IGUAL E
   77  | E • '<' E
   78  | E • '>' E
   79  | E • '+' E
   80  | E • '-' E
   81  | E • '*' E
   82  | E • '/' E
   83  | E • '%' E
  100 F: '(' E • ')'
  106 CHAMA_FUNC: '(' E • ')' '(' LISTA_ARGS ')'

    IGUAL  shift, and go to state 92
    '<'    shift, and go to state 93
    '>'    shift, and go to state 94
    '+'    shift, and go to state 95
    '-'    shift, and go to state 96
    '*'    shift, and go to state 97
    '/'    shift, and go to state 98
    '%'    shift, and go to state 99
    ')'    shift, and go to state 129


State 78

   16 BLOCO: '{' START_BLOCO • CMDs '}' END_BLOCO

    $default  reduce using rule 3 (CMDs)

    CMDs  go to state 130


State 79

   11 CMD: CMD_RET ';' •

    $default  reduce using rule 11 (CMD)


State 80

   12 CMD: CMD_ASM ';' •

    $default  reduce using rule 12 (CMD)


State 81

    4 CMD: CMD_LET ';' •

    $default  reduce using rule 4 (CMD)


State 82

    5 CMD: CMD_VAR ';' •

    $default  reduce using rule 5 (CMD)


State 83

    6 CMD: CMD_CONST ';' •

    $default  reduce using rule 6 (CMD)


State 84

   73 E: LVALUEPROP MAIS_IGUAL • E

    ID           shift, and go to state 4
    CDOUBLE      shift, and go to state 13
    CSTRING      shift, and go to state 14
    CINT         shift, and go to state 15
    CBOOL        shift, and go to state 16
    MAIS_MAIS    shift, and go to state 17
    MENOS_MENOS  shift, and go to state 18
    '+'          shift, and go to state 19
    '-'          shift, and go to state 20
    '['          shift, and go to state 21
    '('          shift, and go to state 22
